nlw/share/skin/s3/css/miki.css
body {
    font-family: Helvetica, Arial, sans-serif;
    margin: 0;
    padding: 0;
}
form {
    margin: 0;
    padding: 0;
}

div.clear {
    clear: both;
}

.content {
    margin: 0 5px;
}

.search {
    margin: 5px;
}

.wiki-include-page {
    border-left: 1px solid #80a9f3;
    padding: 0px 10px 0px 5px;
    margin-left: 12px;
}

.bold {
    font-weight: bold;
}

.logo {
    background: #17417F;
    padding: 5px;
}

.globalnav {
    background-color: #CEECFE;    
    border-bottom: 1px solid #666;
    padding: 3px 2px;
}
.bottom {
    border-top: 1px solid #666;
}
.subnav {
    background-color: #ddd;    
    padding: 3px 2px;
    border-bottom: 1px solid #666;
}

.paging {
    border-top: 1px solid #666;
    background-color: #ddd;    
    padding: 3px 2px;
}

.tabs {
    border-bottom: 1px solid #666;
    background-color: #ddd;    
    padding: 3px 2px;
}

.tabs .letter_set {
    white-space: normal;
}

.globalnav a,
.tabs a {
    white-space: nowrap;
}

.tabs .current, .globalnav .current, .subnav .current {
    font-weight: bold;
}

.feeds {
    padding: 3px 2px;
}

.pageinfo {
    padding: 3px 2px;
    border-top: 1px solid #666;
    background-color: #DDD;
    padding-bottom: 5px;
}

.pageinfo ul, .pageinfo p {
    margin: 0;
}

#errors-and-messages {
    background-color: #fbffbe;
    border: 1px solid #dedede;
    padding: 5px;
    font-weight: bold;
}

.signal_error {
    color: #f00;
    font-weight: bold;
    padding: 10px 0 5px 5px;
}

.people_list,
.event_list {
    width: 100%;
    margin: 5px 0;
    border-collapse: collapse;
    list-style: none;
    padding: 0;
}
.event_list li, .people_list li {
    border-top: 1px solid #666;
    margin-left: 5px;
    padding: 5px 0 3px 0;
    clear: all;
}

.event_list li.first, .people_list li.first {
    border-top: none;
}
.event_list img.avatar {
    float: left;
    border: 1px solid #666 !important;
}
.event_list .mainSection, .people_list .mainSection {
    float: left;
    margin-left: 5px;
}
.event_list .mainSection {
    padding-left: 4px;
    width: 85%;
}
.event_list img.asset-icon {
    float: right;
}
.event_list li {
    position: relative;
}
.ago_text {
    font-style: italic;
    color: #666;
    width: 100%;
    white-space: nowrap !important;
}
.destinationNetworks {
    font-weight: bold;
    white-space: nowrap !important;
}

.people_search {
    padding: 5px;
    border-bottom: 1px solid #666;
}

.people_search input {
    vertical-align: middle;
}

.postsignal {
    padding: 5px;
    border-bottom: 1px solid #666;
}
.postsignal form {
    padding: 0;
    margin: 0;
}
.postsignal textarea {
    width: 300px;
}

.profile {
    padding-top: 10px;
}
.profile img.avatar {
    float: left;
    margin-right: 5px;
    margin-left: 5px;
    border: 1px solid #666 !important;
}
.profile .info {
    padding-bottom: 10px;
    padding-left: 70px;
    height: 75px;
    border-bottom: 1px solid #666;
}
.profile .section {
    border-top: 1px solid #666;
}
.profile .section.first {
    border-top: none;
}
.profile .section {
    padding-bottom: 10px;
    padding-left: 5px;
}
.profile .section.last {
    border-bottom: none;
}

.people_list {
    padding: 5px 0;
}

.people_list img {
    border: none;
}
.people_list img.avatar {
    float: left;
    border: 1px solid #666;
    vertical-align: middle;
    width: 27px !important;
}

.people_list .user_link {
    margin-bottom: 5px;
}

